[gd_scene load_steps=4 format=3 uid="uid://b60f30g8yopyw"]

[ext_resource type="Theme" uid="uid://dh870meh4j8a1" path="res://assets/other/main_theme.tres" id="1_rpnp3"]
[ext_resource type="Script" uid="uid://dtgoj48d6i2mm" path="res://scenes/ui/mana_ui.gd" id="2_jwxui"]
[ext_resource type="Resource" uid="uid://d0o466qgbput5" path="res://heroes/shrike/shrike.tres" id="2_pxfgv"]

[node name="ManaUI" type="VBoxContainer"]
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_top = -340.0
offset_right = 32.0
offset_bottom = -27.0
grow_vertical = 0
alignment = 2
script = ExtResource("2_jwxui")
hero_stats = ExtResource("2_pxfgv")

[node name="ManaIcons" type="VBoxContainer" parent="."]
unique_name_in_owner = true
layout_mode = 2

[node name="LabelPanel" type="Panel" parent="."]
custom_minimum_size = Vector2(32, 32)
layout_mode = 2
theme = ExtResource("1_rpnp3")

[node name="ManaLabel" type="Label" parent="LabelPanel"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
text = "2/3"
horizontal_alignment = 1
vertical_alignment = 1
